First quase lá